# lv

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  TODO.md  build.rs  dev-win.sh  docker-bake.hcl  index.html  package-lock.json  package.json  release-please-config.json  tsconfig.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  release-please.yml  release.yml
docker/: Dockerfile  Dockerfile.linux-aarch64  Dockerfile.linux-x86_64  Dockerfile.windows-x86_64  entrypoint.sh
pkg/: appimage.sh  deb.sh  installer.nsi  lv.desktop
pkg/win64/: README.md  lv.rc
scripts/: build-linux-arm.sh  build-linux-intel.sh  build-windows-intel.sh  cargo-cache-clean.sh  ci.sh  clean.sh  dev-linux.sh  dev-windows.sh  docker-build.sh  fetch-mpvlib.sh  install-hooks.sh  multi.sh  smoke-test-cli.sh  smoke-test-docker.sh  smoke-test-windows.ps1  smoke-test-wine.sh  smoke-test.sh
src/: aimeta.rs  app.tsx  cli.rs  db.rs  jobs.rs  keys.ts  main.rs  preload.rs  preloader.ts  quad.rs  scanner.rs  statusbar.rs  store.ts  style.css  watcher.rs
src-imgui/: .gitignore  Cargo.toml  build.rs
src-imgui/pkg/: fetch-mpv.sh  installer.nsi  lv.desktop
src-imgui/scripts/: ci.sh  install-hooks.sh
src-imgui/src/: aimeta.rs  cli.rs  db.rs  jobs.rs  main.rs  preload.rs  quad.rs  scanner.rs  statusbar.rs  watcher.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: cli.rs  data.rs  db.rs  debug.rs  ipc.rs  lib.rs  main.rs  preload.rs  protocol.rs  scanner.rs  thumbs.rs  watcher.rs  worker.rs
src/__tests__/: components.test.tsx  keys.test.ts  setup.ts  store.test.ts
(+11 files in other folders)
