[package]
name = "lv"
version = "0.1.2"
edition = "2021"

[profile.release]
debug = true

[[bin]]
name = "lv"
path = "src/main.rs"

[dependencies]
sdl2 = { version = "0.37", features = ["raw-window-handle"] }
sdl2-sys = "0.37"
gl = "0.14"
libmpv2 = { version = "5", features = ["render"] }
libmpv2-sys = "4"
libc = "0.2"
image = "0.25"
walkdir = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"
directories = "6"
imgui = "0.12"
imgui-sdl2-support = "0.13"
imgui-glow-renderer = "0.13"
glow = "0.14"
sha2 = "0.10"
sysinfo = "0.33"
flate2 = "1"
clap = { version = "4", features = ["derive"] }
notify = "7"

[build-dependencies]
embed-resource = "3"

[dev-dependencies]
tempfile = "3"
