[package]
name = "lv"
version = "0.1.0"
edition = "2021"

[lib]
name = "lv_lib"
path = "src/lib.rs"

[[bin]]
name = "lv"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
image = { version = "0.25", features = ["webp"] }
sha2 = "0.10"
walkdir = "2"
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
directories = "6"
urlencoding = "2"
ffmpeg-sidecar = "2.4"
base64 = "0.22"

[target.'cfg(unix)'.dependencies]
xattr = "1"
wait-timeout = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
